<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map3"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/titleEditEt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="24dp"
        />

    <EditText
        android:id="@+id/titleEditEt"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/title"
        android:paddingStart="5dp"
        app:layout_constraintBottom_toTopOf="@+id/noteEditEt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/noteEditEt"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edit_text_border"
        android:gravity="start|top"
        android:hint="@string/note"
        android:inputType="textMultiLine"
        android:paddingStart="5dp"
        app:layout_constraintBottom_toTopOf="@+id/saveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelEditBtn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/saveBtn"
        app:layout_constraintStart_toStartOf="@+id/noteEditEt" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/noteEditEt" />

</androidx.constraintlayout.widget.ConstraintLayout>